# lifi-intents-demo

./: .gitignore  PITFALLS.md  PLAN.md  README.md  SUBMISSION.md  SUBMISSION_CHECKLIST.md  article.md  demo_decision_trace.py  demo_doctor.py  demo_script.py  demo_solver_checks.py  process-cast.py  pyproject.toml  record-demo.sh  record_demo.sh  x_thread.md  x_thread_v2.md
.github/workflows/: test.yml
demo/: agent_demo.py  ansi_demo.py  cli_demo.py  mcp_demo.py  record_demo.py  rich_demo.py  video_list.txt
docs/: API.md  FAILURE-MODES.md
examples/: demo_enhanced_policies.py  demo_safe_verdict.py  demo_script.py
lifi_agent/: __init__.py  __main__.py  agent.py  mcp_client.py  models.py  parser.py  server.py  store.py
lifi_agent/templates/: index.html
recordings/: ansi-demo.cast  rich-demo.cast
remotion/: package-lock.json  package.json  tsconfig.json
remotion/public/recordings/: demo.cast
remotion/src/: AudioMix.tsx  Demo.tsx  DemoVideo.tsx  Root.tsx  components.tsx
submission/: x-thread.md
tests/: test_agent_methods.py  test_amount_conversion.py  test_amounts.py  test_api_endpoints.py  test_demo_mode.py  test_mcp_client.py  test_mock_mode.py  test_mode_property.py  test_mode_switching.py  test_models.py  test_new_features.py  test_parser_edge_cases.py  test_policy_parser.py  test_safe_verdict.py  test_verdict_logic.py
